# mlops-pipeline-gcp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd-pipeline.yml  cd-serving.yml  ci.yml
scripts/: deploy_cloud_run.sh  run_pipeline.py  setup_gcp.sh
src/: config.py
src/data/: __init__.py  feature_engineering.py  ingestion.py  validation.py
src/data/queries/: data_quality_checks.sql  extract_raw_data.sql  feature_engineering.sql
src/evaluation/: __init__.py  evaluator.py
src/monitoring/: __init__.py  alerting.py  auto_retrain.py  drift_detector.py
src/pipeline/: pipeline.py
src/serving/: Dockerfile  app.py  preprocessor.py  requirements.txt
src/training/: Dockerfile  __init__.py  hyperparameter_tuning.py  model_registry.py  trainer.py
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/cloud_run/: main.tf  variables.tf
terraform/modules/monitoring/: main.tf  variables.tf
terraform/modules/storage/: main.tf  variables.tf
terraform/modules/vertex_ai/: main.tf  variables.tf
tests/: conftest.py
tests/test_data/: test_feature_engineering.py  test_ingestion.py  test_validation.py
tests/test_evaluation/: test_evaluator.py
tests/test_monitoring/: test_drift_detector.py
tests/test_serving/: test_app.py
tests/test_training/: test_trainer.py
